@@ -17,7 +17,7 @@ apply plugin: 'elasticsearch.publish'
 esplugin {
   name 'x-pack-plesql'
   description 'A plugin to handle PL|ES|QL queries'
-  classname 'org.elasticsearch.xpack.plesql.plugin.PlPlugin'
+  classname 'org.elasticsearch.xpack.plesql.plugin.PlEsqlPlugin'
   extendedPlugins = ['x-pack-core']
 }
 
@@ -25,7 +25,17 @@ base {
   archivesName = 'x-pack-plesql'
 }
 
+test {
+  jvmArgs += [
+    '--enable-native-access=ALL-UNNAMED',
+    '--add-modules=jdk.incubator.vector'
+  ]
+}
+
 dependencies {
+  testImplementation "org.apache.logging.log4j:log4j-core:${versions.log4j}"
+  testImplementation "org.apache.logging.log4j:log4j-api:${versions.log4j}"
+
   api "org.antlr:antlr4-runtime:${versions.antlr4}"
   api project(path: xpackModule('mapper-version'))
   compileOnly project(path: xpackModule('core'))
@@ -33,7 +43,7 @@ dependencies {
   testImplementation project(':test:framework')
   internalClusterTestImplementation project(":modules:mapper-extras")
 }
-configurations {
+configurations {n
   regenerate
 }
 
